# AdventOfCode2020

./: Cargo.toml
benches/: solution_benchmark.rs
data/: day01_input_sorted.txt
src/: error.rs  lib.rs  runner.rs  util.rs  vector.rs
src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day22.rs  day24.rs  mod.rs  prelude.rs
